[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-dev-tools-mcp"
version = "1.0.0"
description = "MCP server for Home Assistant development tools"
readme = "README.md"
authors = [{name = "Home Assistant Development Power"}]
requires-python = ">=3.13"
license = {text = "MIT"}
keywords = [
    "home-assistant",
    "development",
    "mcp-server",
    "model-context-protocol"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development"
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.8.0",
    "cryptography>=41.0.0",
    "jinja2>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/username/ha-dev-tools-mcp"
Documentation = "https://github.com/username/ha-dev-tools-mcp#readme"
Repository = "https://github.com/username/ha-dev-tools-mcp"
Issues = "https://github.com/username/ha-dev-tools-mcp/issues"

[project.scripts]
ha-dev-tools-mcp = "ha_dev_tools.__main__:run"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "aioresponses>=0.7.0",
    "freezegun>=1.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ha_dev_tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.13"
strict = true